--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "17.0.1",
     "react-icons": "^4.1.0",
     "react-syntax-highlighter": "^15.4.3",
-    "react-toastify": "^7.0.3"
+    "react-toastify": "^7.0.3",
+    "sharp": "^0.27.1"
   }
 }
